# firefly-telegram-bot

./: pyproject.toml
src/firefly_telegram_bot/: __init__.py  ai.py  bot.py  config.py  service.py
